--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
-node_modules/
-node_modules/.cache/
+# dependencies
+/node_modules
+
+# environment
 .env
 .env.local
-build/
-dist/
+.env.development.local
+.env.test.local
+.env.production.local
+
+# build
+/build
+/dist
+
+# misc
 .DS_Store
+*.log
