--- a/package.json
+++ b/package.json
@@ -3,25 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.0",
+    "@firebase/app-types": "^0.9.0",
+    "@firebase/auth-types": "^0.12.0",
+    "@firebase/firestore-types": "^3.0.0",
+    "@tailwindcss/forms": "^0.5.10",
     "@types/axios": "^0.14.0",
     "@types/node": "^16.18.0",
-    "@types/react": "^18.0.0",
-    "@types/react-datepicker": "^4.4.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-router-dom": "^5.3.0",
-    "axios": "^0.24.0",
-    "express": "^4.21.2",
-    "firebase": "^9.0.0",
-    "http-proxy-middleware": "^3.0.3",
-    "react": "^18.0.0",
-    "react-datepicker": "^4.7.0",
-    "react-dom": "^18.0.0",
-    "react-firebase-hooks": "^5.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-datepicker": "^4.0.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.0.0",
+    "axios": "^1.6.0",
+    "firebase": "^10.7.0",
+    "firebase-admin": "^11.11.0",
+    "postcss": "^8.0.0",
+    "react": "^18.2.0",
+    "react-datepicker": "^4.0.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.0.0",
-    "typescript": "^4.4.0"
+    "typescript": "^4.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
